<resources>
    <string name="app_name">Calculadora Farmacologica</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="register">Registrarse</string>
    <string name="login">Iniciar sesión</string>
    <string name="menu_home">Inicio</string>
    <string name="menu_clark">Formula de Clark</string>
    <string name="menu_young">Regla de Young</string>
    <string name="menu_fried">Fórmula de Fried</string>
    <string name="menu_surface_dosage">Dosis por superficie corporal</string>
    <string name="menu_infusion_rate">Cálculo de goteo intravenoso</string>
    <string name="menu_renal_clearance">Ajuste por aclaramiento renal</string>
    <string name="menu_weighted_dosage">Dosis ponderada diaria</string>

    <string name="settings">Ajustes</string>



    <string name="news_image_desc">Imagen de la noticia</string>
    <string name="patient_image_desc">Imagen del paciente</string>

</resources>
