<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.TI2.famacologiccalc.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_surface_dosage"
        android:name="com.TI2.famacologiccalc.ui.surfacedosage.SurfaceDosageFragment"
        android:label="@string/menu_surface_dosage"
        tools:layout="@layout/fragment_surface_dosage" />

    <fragment
        android:id="@+id/nav_weighted_dosage"
        android:name="com.TI2.famacologiccalc.ui.weighteddosage.WeightedDosageFragment"
        android:label="@string/menu_weighted_dosage"
        tools:layout="@layout/fragment_weighteddosage" />

    <fragment
        android:id="@+id/nav_clark"
        android:name="com.TI2.famacologiccalc.ui.clark.ClarkFragment"
        android:label="@string/menu_clark"
        tools:layout="@layout/fragment_clark" />

    <fragment
        android:id="@+id/nav_young"
        android:name="com.TI2.famacologiccalc.ui.young.YoungFragment"
        android:label="@string/menu_young"
        tools:layout="@layout/fragment_young" />

    <fragment
        android:id="@+id/nav_fried"
        android:name="com.TI2.famacologiccalc.ui.fried.FriedFragment"
        android:label="@string/menu_fried"
        tools:layout="@layout/fragment_fried" />

    <fragment
        android:id="@+id/nav_infusion_rate"
        android:name="com.TI2.famacologiccalc.ui.infusionrate.InfusionRateFragment"
        android:label="@string/menu_infusion_rate"
        tools:layout="@layout/fragment_infusion_rate" />

    <fragment
        android:id="@+id/nav_renal_clearance"
        android:name="com.TI2.famacologiccalc.ui.renalclearance.RenalClearanceFragment"
        android:label="@string/menu_renal_clearance"
        tools:layout="@layout/fragment_renal_clearance" />

</navigation>